colcon_ws/log/build_2025-04-19_10-40-17/hello_ros2/stdout_stderr.log
running egg_info
creating ../../build/hello_ros2/hello_ros2.egg-info
writing ../../build/hello_ros2/hello_ros2.egg-info/PKG-INFO
writing dependency_links to ../../build/hello_ros2/hello_ros2.egg-info/dependency_links.txt
writing entry points to ../../build/hello_ros2/hello_ros2.egg-info/entry_points.txt
writing requirements to ../../build/hello_ros2/hello_ros2.egg-info/requires.txt
writing top-level names to ../../build/hello_ros2/hello_ros2.egg-info/top_level.txt
writing manifest file '../../build/hello_ros2/hello_ros2.egg-info/SOURCES.txt'
reading manifest file '../../build/hello_ros2/hello_ros2.egg-info/SOURCES.txt'
writing manifest file '../../build/hello_ros2/hello_ros2.egg-info/SOURCES.txt'
running build
running build_py
creating /home/jdj/kuLimo/colcon_ws/build/hello_ros2/build
creating /home/jdj/kuLimo/colcon_ws/build/hello_ros2/build/lib
creating /home/jdj/kuLimo/colcon_ws/build/hello_ros2/build/lib/hello_ros2
copying hello_ros2/__init__.py -> /home/jdj/kuLimo/colcon_ws/build/hello_ros2/build/lib/hello_ros2
copying hello_ros2/hello_ros.py -> /home/jdj/kuLimo/colcon_ws/build/hello_ros2/build/lib/hello_ros2
running install
running install_lib
creating /home/jdj/kuLimo/colcon_ws/install/hello_ros2/lib/python3.10/site-packages/hello_ros2
copying /home/jdj/kuLimo/colcon_ws/build/hello_ros2/build/lib/hello_ros2/__init__.py -> /home/jdj/kuLimo/colcon_ws/install/hello_ros2/lib/python3.10/site-packages/hello_ros2
copying /home/jdj/kuLimo/colcon_ws/build/hello_ros2/build/lib/hello_ros2/hello_ros.py -> /home/jdj/kuLimo/colcon_ws/install/hello_ros2/lib/python3.10/site-packages/hello_ros2
byte-compiling /home/jdj/kuLimo/colcon_ws/install/hello_ros2/lib/python3.10/site-packages/hello_ros2/__init__.py to __init__.cpython-310.pyc
byte-compiling /home/jdj/kuLimo/colcon_ws/install/hello_ros2/lib/python3.10/site-packages/hello_ros2/hello_ros.py to hello_ros.cpython-310.pyc
  File "/home/jdj/kuLimo/colcon_ws/install/hello_ros2/lib/python3.10/site-packages/hello_ros2/hello_ros.py", line 25
    if __name__ '__main__':
                ^^^^^^^^^^
SyntaxError: invalid syntax

running install_data
creating /home/jdj/kuLimo/colcon_ws/install/hello_ros2/share/ament_index
creating /home/jdj/kuLimo/colcon_ws/install/hello_ros2/share/ament_index/resource_index
creating /home/jdj/kuLimo/colcon_ws/install/hello_ros2/share/ament_index/resource_index/packages
copying resource/hello_ros2 -> /home/jdj/kuLimo/colcon_ws/install/hello_ros2/share/ament_index/resource_index/packages
copying package.xml -> /home/jdj/kuLimo/colcon_ws/install/hello_ros2/share/hello_ros2
running install_egg_info
Copying ../../build/hello_ros2/hello_ros2.egg-info to /home/jdj/kuLimo/colcon_ws/install/hello_ros2/lib/python3.10/site-packages/hello_ros2-0.0.0-py3.10.egg-info
running install_scripts
Installing hello_ros script to /home/jdj/kuLimo/colcon_ws/install/hello_ros2/lib/hello_ros2
writing list of installed files to '/home/jdj/kuLimo/colcon_ws/build/hello_ros2/install.log'
